# uhi-cws-lausanne

./: .pre-commit-config.yaml  README.md  Snakefile  environment.yml  pyproject.toml
notebooks/: cws-download-data.ipynb  cws-qc.ipynb  eda.ipynb  features-pca.ipynb  land-data.ipynb  land-use-regression.ipynb  merge-official-cws-data.ipynb  official-data.ipynb  regular-grid.ipynb  t-regression.ipynb  uhi-eda.ipynb  uhi-regression.ipynb
uhi_cws_lausanne/: __init__.py  plot_utils.py  qc_utils.py  regr_utils.py  utils.py
