[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uhi-cws-lausanne"
version = "0.1.0"
description = "Analysis of the urban heat island (UHI) effect in Lausanne using citizen weather stations (CWS)"
authors = [{name = "Martí Bosch", email = "marti.bosch@epfl.ch"}]
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/martibosch/uhi-cws-lausanne"

[tool.codespell]
skip = "notebooks/*.ipynb"

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["uhi_cws_lausanne"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.packages.find]
include = ["uhi_cws_lausanne", "uhi_cws_lausanne.*"]
